<resources>
    <string name="app_name">Connect4_AI</string>
    <string name="x_wins">Red wins!</string>
    <string name="o_wins">Yellow wins!</string>
    <string name="tie_text">TIE!</string>
    <string name="reset">Reset</string>
    <string name="col_1">1</string>
    <string name="col_2">2</string>
    <string name="col_3">3</string>
    <string name="col_4">4</string>
    <string name="col_5">5</string>
    <string name="col_6">6</string>
    <string name="col_7">7</string>
    <string name="connect_four_ai">Connect Four AI</string>
    <string name="two_player_mode">2 Player mode</string>
    <string name="one_player_mode">Vs AI mode</string>
    <string name="leaderboard_mode">Leaderboard</string>
    <string name="created_by">Created by :</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="account_label">Account Screen</string>
    <string name="login_page_label">Login Page</string>
    <string name="username_input_text">Username</string>
    <string name="password_input_text">Password</string>
    <string name="registration_page_label">Registration Page</string>
    <string name="email_input_text">Email</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign up here</string>
    <string name="username_leaderboard">Username </string>
    <string name="ranking">Ranking </string>
    <string name="Winrate">Win rate </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password_confirm">password confirm</string>

</resources>
