<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/registration_page_label"
        android:textColor="#000000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/reg_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/email_input_text"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/reg_username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/username_input_text"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/reg_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/password_input_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/new_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/register_button" />

</LinearLayout>